--- a/index.html
+++ b/index.html
@@ -6,31 +6,45 @@
 </head>
 <body>
 <div class="grid">
-  <a target="_blank" href="">
-    <img src="5terre.jpg" alt="5Terre" width="600" height="400">
+  <a target="_blank" href="designpattern2/france-eiffel-tower.adapt.945.1.jpg">
+    <img src="designpattern2/france-eiffel-tower.adapt.945.1.jpg" alt="5Terre" width="600" height="400">
   </a>
-  <div class="metaText">Add a description of the image here</div>
+  <div class="metaText">Eiffel Tower</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="ardetriomphe.jpg">
-    <img src=".jpg" alt="Forest" width="600" height="400">
+  <a target="_blank" href="designpattern2/arcdetriomphe.jpg">
+    <img src="designpattern2/arcdetriomphe.jpg" alt="Forest" width="600" height="400">
   </a>
-  <div class="metaText">Add a description of the image here</div>
+  <div class="metaText">Arc de Triomphe</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="img_lights.jpg">
-    <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+  <a target="_blank" href="designpattern2/lavenderprovence.jpg">
+    <img src="designpattern2/lavenderprovence.jpg" alt="Northern Lights" width="600" height="400">
   </a>
-  <div class="metaText">Add a description of the image here</div>
+  <div class="metaText">Endless Lavender Fields in Provence</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="img_mountains.jpg">
-    <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="designpattern2/monetgarden.jpg">
+    <img src="designpattern2/monetgarden.jpg" alt="Mountains" width="600" height="400">
   </a>
-  <div class="metaText">Add a description of the image here</div>
+  <div class="metaText">Claude Monet's garden at Giverny</div>
+</div>
+  
+  <div class="grid">
+  <a target="_blank" href="designpattern2/montSaintMichel.jpg">
+    <img src="designpattern2/montSaintMichel.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="metaText">Mont Saint-Michel</div>
+</div>
+  
+  <div class="grid">
+  <a target="_blank" href="designpattern2/versailles.jpg">
+    <img src="designpattern2/versailles.jpg" alt="Mountains" width="600" height="400">
+  </a>
+  <div class="metaText">Palace of Versailles</div>
 </div>
 
 </body>
