--- a/index.html
+++ b/index.html
@@ -6,43 +6,43 @@
 </head>
 <body>
 <div class="grid">
-  <a target="_blank" href="designpattern2/france-eiffel-tower.adapt.945.1.jpg">
-    <img src="designpattern2/france-eiffel-tower.adapt.945.1.jpg" alt="5Terre" width="600" height="400">
+  <a target="_blank" href="france-eiffel-tower.adapt.945.1.jpg">
+    <img src="designpattern2/france-eiffel-tower.adapt.945.1.jpg" alt="Eiffel Tower" width="600" height="400">
   </a>
   <div class="metaText">Eiffel Tower</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="designpattern2/arcdetriomphe.jpg">
-    <img src="designpattern2/arcdetriomphe.jpg" alt="Forest" width="600" height="400">
+  <a target="_blank" href="arcdetriomphe.jpg">
+    <img src="=arcdetriomphe.jpg" alt="arcdetriomphe" width="600" height="400">
   </a>
   <div class="metaText">Arc de Triomphe</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="designpattern2/lavenderprovence.jpg">
-    <img src="designpattern2/lavenderprovence.jpg" alt="Northern Lights" width="600" height="400">
+  <a target="_blank" href="lavenderprovence.jpg">
+    <img src="lavenderprovence.jpg" alt="lavenderprovence" width="600" height="400">
   </a>
   <div class="metaText">Endless Lavender Fields in Provence</div>
 </div>
 
 <div class="grid">
-  <a target="_blank" href="designpattern2/monetgarden.jpg">
-    <img src="designpattern2/monetgarden.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="monetgarden.jpg">
+    <img src="monetgarden.jpg" alt="Claude Monet's garden at Giverny" width="600" height="400">
   </a>
   <div class="metaText">Claude Monet's garden at Giverny</div>
 </div>
   
   <div class="grid">
-  <a target="_blank" href="designpattern2/montSaintMichel.jpg">
-    <img src="designpattern2/montSaintMichel.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="montSaintMichel.jpg">
+    <img src="montSaintMichel.jpg" alt="Mont Saint-Michel" width="600" height="400">
   </a>
   <div class="metaText">Mont Saint-Michel</div>
 </div>
   
   <div class="grid">
-  <a target="_blank" href="designpattern2/versailles.jpg">
-    <img src="designpattern2/versailles.jpg" alt="Mountains" width="600" height="400">
+  <a target="_blank" href="versailles.jpg">
+    <img src="versailles.jpg" alt="Palace of Versailles" width="600" height="400">
   </a>
   <div class="metaText">Palace of Versailles</div>
 </div>
