--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <body>
 <div class="grid">
   <a target="_blank" href="france-eiffel-tower.adapt.945.1.jpg">
-    <img src="designpattern2/france-eiffel-tower.adapt.945.1.jpg" alt="Eiffel Tower" width="600" height="400">
+    <img src="france-eiffel-tower.adapt.945.1.jpg" alt="Eiffel Tower" width="600" height="400">
   </a>
   <div class="metaText">Eiffel Tower</div>
 </div>
 
 <div class="grid">
   <a target="_blank" href="arcdetriomphe.jpg">
-    <img src="=arcdetriomphe.jpg" alt="arcdetriomphe" width="600" height="400">
+    <img src="arcdetriomphe.jpg" alt="arcdetriomphe" width="600" height="400">
   </a>
   <div class="metaText">Arc de Triomphe</div>
 </div>
