--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
   </a>
   <div class="metaText">Palace of Versailles</div>
 </div>
+  
+    <div class="grid">
+  <a target="_blank" href="louvre.jpg">
+    <img src="louvre.jpg" alt="The Louvre" width="600" height="400">
+  </a>
+  <div class="metaText">The Louvre</div>
+</div>
+  
+    <div class="grid">
+  <a target="_blank" href="3902cd9e69c5c336-d8f0a.jpg">
+    <img src="3902cd9e69c5c336-d8f0a.jpg" alt="Paul Boulangerie" width="600" height="400">
+  </a>
+  <div class="metaText">Paul Boulangerie</div>
+</div>
 
 </body>
 </html>
