--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 </div>
   
     <div class="grid">
-  <a target="_blank" href="3902cd9e69c5c336-d8f0a.jpg">
-    <img src="3902cd9e69c5c336-d8f0a.jpg" alt="Paul Boulangerie" width="600" height="400">
+  <a target="_blank" href=paul.jpg">
+    <img src="paul.jpg" alt="Paul Boulangerie" width="600" height="400">
   </a>
   <div class="metaText">Paul Boulangerie</div>
 </div>
